Minor: add quiz search function
