# routes/api.php
@@ -27,13 +27,15 @@ Route::middleware('auth:sanctum')->group(function () {
 
 });
 
+
+Route::get('/quiz/search', [QuizAttemptController::class, 'search']);
 Route::post('/quiz/{quiz}/start', [QuizAttemptController::class, 'start']);
 Route::post('/attempts/answer', [QuizAttemptController::class, 'answerQuestion']);
 Route::post('/quiz/finish', [QuizAttemptController::class, 'finish']);
 
-
 Route::get('/all-quizzes', [QuizController::class, 'allQuizzes']);
 Route::get('/get-question-id/{quizId}', [QuizController::class, 'getFirstQuestionId']);
 Route::get('/quiz/{quizId}/{questionId}', [QuizController::class, 'getQuizQuestion']);
+
 
 
